# ecn_windturb

./: CMakeLists.txt  README.md  Turbine.blend  package.xml  pole.osgt  windturb.cpp  windturb.ini
include/windturb/: okExperiment.h
launch/: gazebo.launch  rviz.launch  uwsim.launch
scripts/: python_plot  wind
src/: detection.cpp  drone_control_node(OLD).cpp  drone_control_node.cpp  okExperiment.cpp  windturb.cpp
urdf/: blade.urdf  camera.urdf  turbine.urdf  turbine_gz.urdf  windfarm.xml
